# actions

./: .bazelrc  .gitignore  MODULE.bazel
.github/: actionlint.yaml
.github/workflows/: actions-cpu-e2e-test.yaml  actions-gpu-e2e-test.yaml  actions-lint.yaml  benchmarking-tests.yaml  check-clang-format-on-error.yaml  check-clang-format.yaml  generate-dashboard-data.yaml  python-lint.yml  run-benchmarks-e2e-test.yaml  run-benchmarks.yaml  test-ci-buildifier-on-error.yaml  test-ci-buildifier.yaml  test.yml  wait-debug-instances.yml  wait-for-connection-bash-fallback-test.yaml  wait-for-connection-no-python.yaml  wait-for-connection-on-error-test.yaml  wait-for-connection-test.yaml  zizmor.yaml
benchmarking/: install_pip_deps.sh  pyproject.toml  run_benchmark.sh
benchmarking/ab_analyzer/: BUILD.bazel  ab_analyzer.py  ab_analyzer_lib.py  ab_analyzer_test.py
benchmarking/actions/dynamic_action_executor/: action.yaml  wrapper.yaml.template
benchmarking/actions/workload_executors/bazel/: action.yaml
benchmarking/actions/workload_executors/python/: action.yaml  install_deps.sh  setup_python.sh
benchmarking/config/: BUILD  README.md  containers.json  gha_runners.json
benchmarking/docs/: onboarding.md
benchmarking/e2e_test/: BUILD.bazel  pyproject.toml  run_benchmark.py  run_benchmark_summary_v1.py  run_benchmark_summary_v2.py  run_benchmark_tensorboardx.py  test_registry.pbtxt
benchmarking/gh_matrix_generator/: BUILD.bazel  gh_matrix_generator.py  gh_matrix_generator_lib.py  gh_matrix_generator_test.py
benchmarking/post_pr_comment/: BUILD.bazel  post_pr_comment.js
benchmarking/proto/: BUILD  BUILD.bazel  benchmark_job.proto  benchmark_registry.proto  benchmark_result.proto
benchmarking/proto/common/: BUILD.bazel  metric.proto  stat.proto  workflow_type.proto  workload_action.proto
benchmarking/publisher/: BUILD.bazel  publish_results.py  publish_results_lib.py  publish_results_test.py
benchmarking/static_threshold_analyzer/: BUILD.bazel  static_threshold_analyzer.py  static_threshold_analyzer_lib.py  static_threshold_analyzer_test.py
benchmarking/tb_parser/: BUILD.bazel  tb_parser.py  tb_parser_lib.py  tb_parser_test.py
ci_buildifier/: README.md  action.yaml
ci_clangformat/: README.md  action.yaml
ci_connection/: README.md  action.yaml  entrypoint.sh  fallback.sh  get_labels.py  notify_connection.py  preserve_run_state.py  utils.py  utils.sh  wait_for_connection.py  wait_for_connection.sh  wait_for_connection_fallback.sh
ci_dashboard/data_query/: go.mod  go.sum  main.go
ci_dashboard/frontend/: package-lock.json
ci_dashboard/frontend/src/: styles.scss
ci_dashboard/frontend/src/navbar/: navbar.component.html  navbar.component.scss
ci_dashboard/frontend/src/workflow-data/: workflow-data.ts  workflow.service.ts
ci_dashboard/frontend/src/workflow-entry/: workflow-entry.component.html  workflow-entry.component.ts
python_seed_env/: README.md  pyproject.toml
python_seed_env/experiment/: pyproject.toml  requirements.txt
python_seed_env/experiment/generated_env_artifacts/: pyproject.toml
python_seed_env/experiment/generated_env_artifacts/python3_12/: jax_ai_stack_requirements_lock_3_12.txt  pyproject.toml
python_seed_env/experiment/old/: pyproject.toml
python_seed_env/seed_env/: __init__.py  cli.py  config.py  core.py  git_utils.py  seeder.py  utils.py  uv_utils.py
python_seed_env/seed_env/seed_configs/: jax_seed.yaml
python_seed_env/seed_env/seeders/: __init__.py  base_seeder.py  jax_seeder.py
python_seed_env/src/seed_env/: cli.py  config.py  core.py  utils.py  uv_utils.py
python_seed_env/tests/: __init__.py  test_cli.py  test_core.py  test_seeder.py  test_utils.py
test/ci_buildifier/: BUILD
test/ci_buildifier/subfolder/: test.bzl
test/ci_buildifier/subfolder/subfolder/: BUILD
tests/ci_buildifier/formatted/: BUILD
tests/ci_buildifier/unformatted/: BUILD  MODULE.bazel  WORKSPACE
tests/ci_buildifier/unformatted/subdir/: macros.bzl
tests/ci_clangformat/: absl_status_casters.h  callback.h  config.cc  config.h  custom_call_sharding.cc  custom_call_sharding.h  dlpack.cc  dlpack.h  ffi.cc  ffi.h  ffi_helpers.h  guard_lib.cc  guard_lib.h  ifrt_proxy.cc  ifrt_proxy.h  jax_jit.cc  jax_jit.h  kernel_helpers.h  kernel_nanobind_helpers.h  mlir.cc  mlir.h  nb_class_ptr.h  pjit.cc  pjit.h  pmap_lib.cc  pmap_lib.h  py_array.cc  py_array.h  py_client.cc  py_client.h  py_client_cpu.cc  py_compile_only_client.cc  py_compile_only_client.h  py_device.cc  py_device.h  py_device_list.cc  py_device_list.h  py_executable.cc  py_executable.h  py_host_callback.cc  (+29 more)
tests/ci_clangformat/formatted_files/: callback.cc
tests/ci_clangformat/unformatted_files/: callback.h  config.cc
tests/ci_clangformat/unformatted_files/subdir/: absl_status_casters.h
