# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_binary.bzl", "py_binary")

py_binary(
    name = "test_benchmark_summary_v1",
    main = "run_benchmark_summary_v1.py",
    srcs = ["run_benchmark_summary_v1.py"],
    deps = [
        "@pypi//tensorboard",
        "@pypi//setuptools"
    ],
)

py_binary(
    name = "test_benchmark_summary_v2",
    main = "run_benchmark_summary_v2.py",
    srcs = ["run_benchmark_summary_v2.py"],
    deps = [
        "@pypi//tensorflow",
        "@pypi//setuptools"
    ],
)

py_binary(
    name = "test_benchmark_tensorboardx",
    main = "run_benchmark_tensorboardx.py",
    srcs = ["run_benchmark_tensorboardx.py"],
    deps = [
        "@pypi//tensorboardx",
        "@pypi//setuptools"
    ],
)