# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "gh_matrix_generator_lib",
    srcs = ["gh_matrix_generator_lib.py"],
    deps = [
        "//benchmarking/proto:benchmark_registry_py_proto",
        "//benchmarking/proto/common:workflow_type_py_proto",
        "@pypi//protovalidate",
    ],
)

py_binary(
    name = "gh_matrix_generator",
    main = "gh_matrix_generator.py",
    srcs = ["gh_matrix_generator.py"],
    deps = [
        ":gh_matrix_generator_lib",
    ],
)

py_test(
    name = "gh_matrix_generator_test",
    srcs = ["gh_matrix_generator_test.py"],
    deps = [
        ":gh_matrix_generator_lib",
        "@pypi//pytest"
    ],
)
