# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "static_threshold_analyzer_lib",
    srcs = ["static_threshold_analyzer_lib.py"],
    deps = [
        "//benchmarking/proto:benchmark_registry_py_proto",
        "//benchmarking/proto:benchmark_result_py_proto",
        "//benchmarking/proto/common:stat_py_proto",
    ],
)

py_binary(
    name = "static_threshold_analyzer",
    main = "static_threshold_analyzer.py",
    srcs = ["static_threshold_analyzer.py"],
    deps = [
        ":static_threshold_analyzer_lib",
        "//benchmarking/proto:benchmark_registry_py_proto",
        "//benchmarking/proto:benchmark_result_py_proto",
    ],
)

py_test(
    name = "static_threshold_analyzer_test",
    srcs = ["static_threshold_analyzer_test.py"],
    deps = [
        ":static_threshold_analyzer_lib",
        "@pypi//pytest",
        "//benchmarking/proto:benchmark_registry_py_proto",
        "//benchmarking/proto:benchmark_result_py_proto",
        "//benchmarking/proto/common:stat_py_proto",
    ],
)
