# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")

proto_library(
    name = "stat_proto",
    srcs = ["stat.proto"],
    visibility = ["//benchmarking:__subpackages__"],
)

py_proto_library(
    name = "stat_py_proto",
    deps = [":stat_proto"],
    visibility = ["//benchmarking:__subpackages__"],
)

proto_library(
    name = "workflow_type_proto",
    srcs = ["workflow_type.proto"],
    visibility = ["//benchmarking:__subpackages__"],
)

py_proto_library(
    name = "workflow_type_py_proto",
    deps = [":workflow_type_proto"],
    visibility = ["//benchmarking:__subpackages__"],
)
