# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")

package(default_visibility = ["//benchmarking:__subpackages__"])

proto_library(
    name = "metric_proto",
    srcs = ["metric.proto"],
    deps = [
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
        "@protobuf//:wrappers_proto"
    ]
)

proto_library(
    name = "workflow_type_proto",
    srcs = ["workflow_type.proto"],
)

proto_library(
    name = "workload_action_proto",
    srcs = ["workload_action.proto"],
    deps = [
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto"
    ]
)

py_proto_library(
    name = "metric_py_proto",
    deps = [":metric_proto"],
)

py_proto_library(
    name = "workflow_type_py_proto",
    deps = [":workflow_type_proto"],
)

py_proto_library(
    name = "workload_action_py_proto",
    deps = [":workload_action_proto"],
)
